<resources>
    <string name="app_name">Sikligtas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_text">Continue</string>
    <string name="permission_description">Welcome to Sikligtas App. We must first ask your permission to access your location before using the application. Otherwise, we will not be able to offer our service to you.  If you agree and wish to continue tap on the button below.</string>
    <string name="permission_required">Permission Required</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="tap_on_my_location_button">Tap on my Location Button</string>
    <string name="distance">Distance</string>
    <string name="time">Duration</string>
    <string name="result">%1$s km</string>
    <string name="forgotPassword"><u>Forgot your Password?</u></string>
    <string name="sign_up">Don\'t have an account? <u>Sign Up</u></string>
    <string name="login">Already have an account? <u>Login</u></string>
    <string name="hazard_info">In %s meters, there is a nearby %s on your %s.</string>
    <string name="connection_error">\u2022 Check if the device is turned ON\n\u2022 Check if the Device is connected to your hotspot\n\u2022 Verify if your hotspot credentials is correct\n\u2022 Verify if the IP Address is correct</string>

    <!--    API KEYS     -->
    <string name="google_maps_key" translatable="false">AIzaSyCtlOWS5y1fbO7c9GhcYGCim_QMLxlV3Ys</string>
    <string name="weather_api_key" translatable="false">6e15e38580b41e39d9b85ee972e63c49</string>

    <string name="hello_there">Hello there,</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="create_an_account">Create an account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_txt">Sign Up</string>
    <string name="sikligtas">sikligtas</string>
    <string name="about_description">Sikligtas is a smart bicycle warning system that aims to provide cyclists with additional protection by alerting them to potential vehicle hazards.</string>
    <string name="Go">GO</string>
</resources>